# Hypothex

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  debug-skill.md  pyproject.toml  skill.md  start.py
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/plans/: 2026-03-13-debug-mode.md  2026-03-13-hypothex-implementation.md
docs/superpowers/specs/: 2026-03-13-debug-mode-design.md  2026-03-13-hypothex-design.md
skills/hypothex/: SKILL.md
skills/hypothex-debug/: SKILL.md
src/hypothex/: collector.py  db.py  main.py  mcp_server.py  models.py
tests/: test_collector.py  test_db.py  test_mcp_server.py
