[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypothex"
version = "0.1.0"
description = "Runtime debugging MCP server for Claude Code"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "aiosqlite>=0.21.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[project.scripts]
hypothex = "hypothex.main:main"
